# lrose-soloii

./: Dockerfile  LICENSE.txt  Makefile.in  README.md  README.soloii  build_soloii_rpm  checkSoloiiInstall.py  config.status  configure  configure.ac  sii_build_date.pl
docker/: 1.18.Dockerfile  CHANGELOG.md  DEVELOP.md  README.md  USAGE.md  WINDOWS.md  build-docker-soloii-1-18.sh  entrypoint.sh  soloii-docker
editor/: Makefile.in  se_BB_unfold.c  se_for_each.c  se_utils.c  sxm_examine.c
include/: Cell.h  CellSpacing.h  CellSpacingFP.h  CellVector.h  Comment.h  Correction.h  DrawWidget.h  DrawWidgetP.h  FieldLidar.h  FieldParam.h  FieldRadar.h  InSitu.h  InSituData.h  IndFreq.h  LidarDesc.h  LidarParam.h  MiniRIMS.h  NavDesc.h  Parameter.h  Pdata.h  Platform.h  Qdata.h  RadarDesc.h  Ray.h  Sweep.h  TimeSeries.h  Volume.h  Waveform.h  Xtra_stuff.h  cappis.h  date_stamp.h  dd_defines.h  dd_files.h  dd_general_info.h  dd_types.h  dgi_func_decl.h  disk_struct.h  dorade.h  dorade_headers.h  dorade_share.h  (+19 more)
include/piraq/: piraq.h  piraqx.h
packer/: BUILD.md  CHANGELOG.md  README.md  USAGE.md  gsettings-lrose.desktop  gsettings-vagrant.desktop  gsettings.sh  lrose-soloii.json
packer/Desktop/: README.txt  lrose-soloii.desktop
packer/etc/gdm/: custom-lrose.conf  custom-vagrant.conf
packer/etc/sysconfig/: iptables
packer/http/: ks-centos-5.11.cfg  ks-centos7-lrose.cfg
packer/scripts/: build-tools.sh  cleanup.sh  desktop.sh  docker.sh  lrose-soloii.sh  soloii-docker.sh  update.sh  virtualbox.sh  yum-repos.sh
packer/var/cache/yum/base/: mirrorlist.txt
packer/var/cache/yum/extras/: mirrorlist.txt
packer/var/cache/yum/updates/: mirrorlist.txt
perusal/: Makefile.in  color_tables.h  help_edit.h  help_exam.h  help_param.h  help_sii.h  help_swpfi.h  help_view.h  inplace_swap.h  sii_X_stuff.c  sii_bscan.c  sii_callbacks.c  sii_colors_stuff.c  sii_config_stuff.c  sii_edit_widgets.c  sii_exam_widgets.c  sii_externals.h  sii_fixme.c  sii_frame_menu.c  sii_links_widget.c  sii_old_utils.c  sii_overlays.h  sii_param_widgets.c  sii_perusal.c  sii_swpfi_widgets.c  sii_utils.c  sii_utils.h  sii_view_widgets.c  sii_xyraster.c  solo2.c  soloii.c  soloii.h  sp_accepts.c  sp_basics.c  sp_clkd.c  sp_colors.c  sp_dorade.c  sp_lists.c  sp_pals.c  sp_save_frms.c  (+2 more)
translate/: Cappi.h  Makefile.in  README.xltrsii.html  ads_data.c  ads_data.h  ads_main.c  by_products.c  cfac_file.c  cimm_dd.c  dap_common.c  dd_catalog.c  dd_crackers.c  dd_der_flds.c  dd_examine.c  dd_files.c  dd_files_test.c  dd_io_mgmt.c  dd_io_routines.c  dd_io_structs.h  dd_ncdf.c  dd_stats.h  dd_swp_files.c  dd_swpfi.c  dd_time.c  dd_uf.c  dd_uf.h  dda_common.c  ddb_common.c  ddin.c  ddmain.c  ddout.c  ddout_main.c  dduf_main.c  dorade_ncdf.c  dorade_share.c  dorade_tape.c  dorade_uf.c  eld_main.c  elda_dd.c  eldb_dd.c  (+43 more)
